# tb-updater

./: Cargo.toml  LICENSE  README.md
src/: application_state.rs  internet.rs  lib.rs  main.rs  thunderbird.desktop
