[package]
name = "tb-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bzip2 = "0.4.4"
http = "0.2.9"
indicatif = "0.17.6"
reqwest = { version = "0.11.20", features = ["deflate", "gzip", "brotli"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.105"
structopt = { version = "0.3.26", features = ["color"] }
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
